made changes to project

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* In your CSS file or a custom Tailwind configuration file */
+@layer utilities {
+    .h-vh-screen {
+      height: 60vh;
+    }
+}
+  
