Started to add loading component

--- a/src/index.css
+++ b/src/index.css
@@ -10,47 +10,15 @@
 }
   
 .loader {
-  width: 24px;
-  height: 24px;
-  border: 2px dotted #FFF;
-  border-style: solid solid dotted dotted;
+  border: 6px solid #f3f3f3; /* Light grey */
+  border-top: 6px solid black; /* Blue */
   border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  animation: rotation 2s linear infinite;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
 }
-.loader::after {
-  content: '';  
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  border: 2px dotted #FF3D00;
-  border-style: solid solid dotted;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  animation: rotationBack 1s linear infinite;
-  transform-origin: center center;
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
-    
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} 
-@keyframes rotationBack {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
-} 
