--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,23 @@
     }
 }
   
+.loaderSmall {
+  border: 3px solid #f3f3f3; /* Light grey */
+  border-top: 3px solid black; /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+  
 .loader {
-  border: 4px solid #f3f3f3; /* Light grey */
-  border-top: 4px solid black; /* Blue */
+  border: 3px solid #f3f3f3; /* Light grey */
+  border-top: 3px solid black; /* Blue */
   border-radius: 50%;
   width: 80px;
   height: 80px;
